--- a/.github/workflows/deployColab.yml
+++ b/.github/workflows/deployColab.yml
@@ -22,6 +22,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v3
+
       - uses: actions/download-artifact@v3
         with:
           name: ${{inputs.saveNameNotebooks}}
