--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ authors = [
         { name="Spark Wave LLC", email="willfind@gmail.com" },
         ]
 description = "Interfaces and tools for data science."
+readme = {file="README", content-type="text/x-rst"}
 requires-python = ">=3.8, <3.12"
 license = {text = "Apache 2.0"}
 classifiers = [
