--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ authors = [
         ]
 description = "Interfaces and tools for data science."
 readme = {file="README.md", content-type="text/markdown"}
-requires-python = ">=3.8, <3.12"
+requires-python = ">=3.8, <=3.12"
 license = {text = "Apache 2.0"}
 classifiers = [
         'Development Status :: 3 - Alpha',
@@ -24,6 +24,7 @@ classifiers = [
         'Programming Language :: Python :: 3.9',
         'Programming Language :: Python :: 3.10',
         'Programming Language :: Python :: 3.11',
+        'Programming Language :: Python :: 3.12',
         'Operating System :: OS Independent',
         'License :: OSI Approved :: Apache Software License',
         ]
