Adjust links for custom domain, change frontpage, remove wheel install table

--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -50,4 +50,4 @@ jobs:
           pip install nimble[quickstart] --find-links=./documentation/source/wheels # Only if needed 
 
       - name: Run pytest
-        run: pytest -v -p no:cacheprovider
+        run: pytest -p no:cacheprovider
