--- a/.github/workflows/buildWheels.yml
+++ b/.github/workflows/buildWheels.yml
@@ -28,8 +28,7 @@ jobs:
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         #os: ["ubuntu-latest"]
-        pyVer: ["cp3*"]
-        #pyVer: ["cp3*", "cp39", "cp310", "cp311"]
+        pyVer: ["cp38", "cp39", "cp310", "cp311", "cp312"]
         #pyVer: ["cp310"]
 
     steps:
@@ -44,6 +43,7 @@ jobs:
             3.9
             3.10
             3.11
+            3.12
           cache: 'pip'
           cache-dependency-path: pyproject.toml
 
