--- a/.github/workflows/buildSite.yml
+++ b/.github/workflows/buildSite.yml
@@ -48,7 +48,7 @@ jobs:
       # This should prep pip to use cached downloads
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: "3.10"
           cache: pip
           cache-dependency-path: pyproject.toml
 
