--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ readme = {file="README.md", content-type="text/markdown"}
 requires-python = ">=3.8, <3.13"
 license = {text = "Apache 2.0"}
 classifiers = [
-        'Development Status :: 3 - Alpha',
+        'Development Status :: 5 - Production/Stable',
         'Programming Language :: Python :: 3',
         'Programming Language :: Python :: 3.8',
         'Programming Language :: Python :: 3.9',
